libs/parser/testdata/fixtures/negative/unterminated_string.csl
source:
	alias: 'unterminated
	type: 'test'
